Fix loader and error not showing

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html,
 body,
 #root {
   width: 100%;
+  height: 100%;
 }
 body {
   background-color: #232323;
